nginx-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
  labels:
    name: nginx-deployment
    environment: local
spec:
  ports:
  - port: 80
  selector:
    app: nginx
