nginx-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-deployment-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: demo.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deployment
            port: 
              number: 80
